# B-Cell

./: .gitignore  agent_tools.py  audio_native_dialog.py  audio_native_dialogue.py  bcell_api.py  bcell_api_v3.py  dialog.py  dialogue.py  logrotate.conf  notes.txt  pinecone_create.py  pinecone_ingest.py  prompt.txt  prompt_rewriter.txt  pyproject.toml  system_prompt.md  voice.py
knowledge/: pinecone_create.py  pinecone_ingest.py  talvey-claims.json  talvey-claims.md
knowledge/Summaries/: 10. Chari CLML 2024.md  11. Radhakrishnan 2024.md  12. Jacob 2024.md  13. Mohty 2019.md  14. Nightingale 2024.md  15. Rasche L, et al. ASCO 2025.md  16. Chari Lancet Oncol 2025.md  17. Raje et al 2022.md  18. Einsele Advances in Therapy 2024.md  19. Tanaka 2014.md  2. de Gruijter.md  20. Bhat 2017.md  21. Liu 2021.md  22. Carlini 2023.md  23. DeBerge 2014.md  24. Vidarsson 2014.md  25. Cambier 2023.md  26. Pillarisetti Blood 2020.md  27. Koenderman 2019.md  28. Rajkummar Blood 2011.md  3. Macallan 2005.md  4. Jansen 2021.md  5. Palm 2019.md  6. Atamaniuk Eur J Clin Invest 2012.md  7. Kodama Mol Cancer Ther 2019_GPRC5D.md  8. Schinke C et al. Blood Adv 2025.md  9. Verkleij_Blood Adv_2021.md  Akkaya et al, 2019.summary.md  Atamaniuk Eur J Clin Invest 2012.summary.md  Atamaniuk J et al. Eur J Clin Invest 2012; 42(9):953–960.md  Bhat P et al. Cell Death Dis 2017; 8(6):e2836.md  Bhat et al, 2017 - IFN-Y.summary.md  Branchett et al, 2019 - IL10 and IL-35.summary.md  Cambier 2023.md  Cambier S et al. Cell Mol Immunol 2023; 20(3):217-251.md  Cambier et al 2023 - CXCL12.summary.md  Carlini V et al. Front Immunol 2023; 14:1161067.md  Carlini et al, 2023 - IL10.summary.md  Chari A et al. Clin Lymphoma Myeloma Leuk 2024; 24(10):665–693.md  (+52 more)
(+38 files in other folders)
